--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,9 @@
-body {
+@charset "utf-8";
+body,
+input,
+textarea,
+select,
+button {
     font-family: 'Noto_M', '본고딕', 'Noto Sans CJK kR Medium', 'Noto Sans CJK kR Medium';
 }
 
@@ -12,10 +17,11 @@ body {
 
 header {
     width: 100%;
+    z-index: 10;
 }
 
 header .logo-area {
-    width: 80%;
+    max-width: 1400px;
     margin: 0 auto;
     position: relative;
     height: 90px;
@@ -32,37 +38,45 @@ header .logo-area .logo a {
 header .logo-area .tnb {
     position: absolute;
     top: 20%;
-    right: 0;
+    right: 10px;
 }
 
-header .logo-area .tnb ul li {
+header .logo-area .tnb .util li {
     display: inline-block;
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 100;
+    letter-spacing: -0.3px;
 }
 
-header .logo-area .tnb ul li+li {
+header .logo-area .tnb .util li+li {
     margin-left: 27px;
 }
 
-header .logo-area .tnb ul .language select {
+header .logo-area .tnb .util .language select {
     border: none;
     background: transparent;
     height: 25px;
+    font-size: 12px;
+    appearance: none;
+    margin-right: 10px;
 }
 
-
-/* header .gnb-area */
+header .logo-area .tnb .util .language select:focus {
+    outline: none;
+}
 
 header .gnb-area {
     width: 100%;
-    background: #67625D;
+    background: #67625d;
+    position: relative;
+    z-index: 10;
 }
 
 header .gnb-area .gnb {
-    height: 60px;
-    margin: 0 10%;
+    height: 63px;
     position: relative;
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 header .gnb-area .gnb .gnb-list {
@@ -72,48 +86,126 @@ header .gnb-area .gnb .gnb-list {
 header .gnb-area .gnb .gnb-list>li {
     position: relative;
     display: inline-block;
-    padding: 0 20px 0 0;
     text-align: left;
-    width: 130px;
+    width: 140px;
     font-size: 15px;
+}
+
+header .gnb-area .gnb .gnb-list>li:last-child {
+    margin-left: 25px;
 }
 
 header .gnb-area .gnb .gnb-list>li>a {
     color: #fff;
-    line-height: 60px;
+    line-height: 63px;
 }
 
-header .gnb-area .gnb .gnb-list ul {
-    display: none;
+header .gnb-area .gnb .gnb-list>li:hover a {
+    color: #daf100;
+    position: relative;
+}
+
+header .gnb-area .gnb .gnb-list>li>a:after {
+    content: '';
+    transition: all 0.5s;
+    width: 0;
+}
+
+header .gnb-area .gnb .gnb-list>li:hover>a:after {
+    content: '';
     position: absolute;
-    width: 100%;
-    padding-right: 13px;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 20px;
+    height: 2px;
+    background: #daf100;
 }
 
-header .gnb-area .gnb .gnb-list ul>li {
-    line-height: 50px;
-    color: #D3D3D3;
+
+/* sub-menu */
+
+header .gnb-area .gnb:hover .sub-menu {
+    display: inline-block;
+}
+
+header .gnb-area .gnb .sub-menu {
+    display: none;
+    width: 100vw;
+    height: 370px;
+    margin-left: calc(-51vw + 50%);
+    background: #fff;
+    border-bottom: 1px solid #ccc;
+    overflow: hidden;
+}
+
+header .gnb-area .gnb .sub-menu .wrap {
+    max-width: 1400px;
+    height: inherit;
+    margin: 0 auto;
+    position: relative;
+}
+
+header .gnb-area .gnb .sub-menu .wrap .ad-area {
+    position: absolute;
+    top: 15%;
+    left: 0;
+}
+
+header .gnb-area .gnb .sub-menu .wrap .ad-area .title {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+header .gnb-area .gnb .sub-menu .wrap .ad-area .text {
+    font-size: 17px;
+}
+
+header .gnb-area .gnb .sub-menu .wrap .sub-menu-area {
+    box-sizing: border-box;
+    width: 1280px;
+    height: inherit;
+    margin: 0 auto;
+    padding-left: 280px;
+}
+
+header .gnb-area .gnb .sub-menu .wrap ul {
+    float: left;
+    width: 140px;
+    margin-right: 5px;
+    line-height: 40px;
+    padding-top: 20px;
+    color: #8b8b8b;
     font-size: 14px;
 }
 
-header .gnb-area .gnb .gnb-list li:hover ul {
-    /* display: block; */
+header .gnb-area .gnb .sub-menu .wrap ul:last-child {
+    margin-left: 25px;
 }
 
-header .gnb-area .gnb .gnb-list>li:hover>ul {
-    color: red;
+header .gnb-area .gnb .sub-menu .wrap ul li a {
+    width: inherit;
+    cursor: pointer;
+    display: block;
 }
+
+header .gnb-area .gnb .sub-menu .wrap ul li a:hover {
+    color: #a1af1b;
+}
+
+
+/* add-menu */
 
 header .gnb-area .gnb .addmenu-list {
-    height: 60px;
+    height: 63px;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 25px;
 }
 
 header .gnb-area .addmenu-list li {
     height: inherit;
-    width: 40px;
+    width: 35px;
     display: inline-block;
 }
 
@@ -167,8 +259,8 @@ header .gnb-area .addmenu-list li .add-menu {
     visibility: hidden;
     position: absolute;
     box-sizing: border-box;
-    top: 60px;
-    right: 0;
+    top: 63px;
+    right: -15px;
     width: 230px;
     padding: 30px 20px;
     border: 0.1px solid #ccc;
@@ -195,7 +287,8 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .visual {
     height: 640px;
-    border-bottom: 1px solid #D3D3D3;
+    border-bottom: 1px solid #d3d3d3;
+    z-index: 1;
 }
 
 .visual-wrap {
@@ -223,12 +316,14 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .visual-wrap .img-slide a .title {
     margin-top: 170px;
     font-size: 50px;
+    font-family: 'AritaBuriSB', sans-serif;
 }
 
 .visual-wrap .img-slide a .sub-title {
     font-size: 26px;
-    font-weight: 100;
-    color: gray;
+    font-weight: 500;
+    letter-spacing: -0.1rem;
+    color: #86857b;
     position: relative;
     margin-bottom: 40px;
 }
@@ -246,22 +341,27 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .visual-wrap .img-slide a time {
     font-size: 19px;
+    letter-spacing: -0.3px;
 }
 
 .visual-wrap .img-slide a:first-child {
-    background: url("../img/20200429165936082RP.jpg") no-repeat -100px 0;
+    background: url('../img/20200429165936082RP.jpg') no-repeat 50% 50%;
+    background-size: cover;
 }
 
 .visual-wrap .img-slide a:nth-child(2) {
-    background: url("../img/20191021102748338WH.jpg") no-repeat -100px 0;
+    background: url('../img/20191021102748338WH.jpg') no-repeat 50% 50%;
+    background-size: cover;
 }
 
 .visual-wrap .img-slide a:nth-child(3) {
-    background: url("../img/20200422142224804WT.jpg") no-repeat -100px 0;
+    background: url('../img/20200422142224804WT.jpg') no-repeat 50% 50%;
+    background-size: cover;
 }
 
 .visual-wrap .img-slide a:last-child {
-    background: url("../img/20200515150401296JK.jpg") no-repeat -100px 0;
+    background: url('../img/20200515150401296JK.jpg') no-repeat 50% 50%;
+    background-size: cover;
 }
 
 .visual-wrap .slide-select-area {
@@ -321,14 +421,17 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 /* ------ start - weekly-best ------ */
 
-.weekly-best {}
+.weekly-best {
+    visibility: hidden;
+}
 
 .weekly-best .wrap {
+    max-width: 1400px;
     width: 80%;
     height: 550px;
     overflow: hidden;
     margin: 100px auto;
-    background: blue;
+    /* background: blue; */
     position: relative;
 }
 
@@ -377,7 +480,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .weekly-best .review .review-content {
     height: 100px;
     background: pink;
-    border-top: 1px solid #D3D3D3;
+    border-top: 1px solid #d3d3d3;
 }
 
 .weekly-best .sales h3 {
