--- a/src/css/index.css
+++ b/src/css/index.css
@@ -302,11 +302,9 @@ header .gnb-area .addmenu-list li .add-menu li+li {
     height: 100%;
     position: absolute;
     width: 100%;
-    /* background-size: cover; */
 }
 
 .visual-wrap .img-slide a {
-    /* display: inline-block; */
     float: left;
     width: 100%;
     height: 550px;
@@ -316,7 +314,6 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .visual-wrap .img-slide a .title {
     margin-top: 170px;
     font-size: 50px;
-    font-family: 'AritaBuriSB', sans-serif;
 }
 
 .visual-wrap .img-slide a .sub-title {
@@ -365,11 +362,11 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .visual-wrap .slide-select-area {
-    width: 50%;
+    width: 960px;
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-45%);
 }
 
 .visual-wrap .slide-select-area ul {
@@ -384,14 +381,19 @@ header .gnb-area .addmenu-list li .add-menu li+li {
     width: 25%;
     height: 40px;
     line-height: 40px;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    background: #7f7e69;
     color: #fff;
-    font-size: 18px;
+    font-size: 17px;
 }
 
 .visual-wrap .slide-select-area ul li:hover {
     background: #a1af1b;
     color: #fff;
+    transition: background 0.5s;
+}
+
+.visual-wrap .slide-select-area ul li a {
+    display: block;
 }
 
 .visual-wrap .btn-slide-stop {
