--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1181,3 +1181,140 @@ header .gnb-area .addmenu-list li .add-menu li+li {
     top: -79px;
     left: -20px;
 }
+
+
+/* ------ shop-start ------ */
+
+.shop {
+    width: 1400px;
+    margin: 100px auto;
+    height: 720px;
+}
+
+.shop h2 {
+    position: relative;
+    margin: 50px 0 20px;
+    font-size: 42px;
+    font-weight: bold;
+    letter-spacing: -2px;
+}
+
+.shop h2::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    background: url('../img/tit_bg.png') no-repeat center;
+    width: 31px;
+    height: 31px;
+    margin-left: 10px;
+}
+
+.shop>p {
+    margin: 20px 0;
+    font-size: 18px;
+    color: #6c6c6c;
+}
+
+.shop .slide-area {
+    margin-bottom: 30px;
+}
+
+.shop .slide-area .top {
+    width: 100%;
+    height: 525px;
+    background: #000;
+    overflow: hidden;
+}
+
+.shop .slide-area .top ul {
+    font-size: 0;
+}
+
+.shop .slide-area .top>ul>li {
+    float: left;
+    width: 500px;
+}
+
+.shop .slide-area .top>ul>li img {
+    width: 927px;
+    display: inline-block;
+}
+
+.shop .slide-area .top img:nth-child(1) {
+    margin-left: -50%;
+}
+
+.shop .bottom {
+    height: 95px;
+    background: #000;
+    padding: 0 200px;
+}
+
+.shop .bottom .shop-list {
+    height: inherit;
+    overflow: hidden;
+}
+
+.shop .bottom .shop-list li {
+    float: left;
+    white-space: nowrap;
+    color: #fff;
+    width: 250px;
+    height: 95px;
+    line-height: 95px;
+    text-align: center;
+    font-size: 20px;
+}
+
+
+/* item-list */
+
+.shop .item-list {
+    position: relative;
+    height: 700px;
+}
+
+.shop .item-list h3 {
+    position: absolute;
+    top: 0;
+    right: 240px;
+}
+
+.shop .item-list .bestseller h3 {
+    position: absolute;
+    top: 0;
+    right: 120px;
+}
+
+.shop .item-list .sale h3 {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.shop .item-list ul {
+    width: 100%;
+    border-top: 1px solid #8b8b8b;
+    position: absolute;
+    top: 40px;
+    padding-top: 30px;
+    overflow: hidden;
+}
+
+.shop .item-list ul li {
+    float: left;
+    width: 25%;
+    height: 600px;
+    background: pink;
+}
+
+.shop .item-list .btn-all-item-view {
+    display: inline-block;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background: orange;
+    font-size: 20px;
+    margin: 50px 0;
+}
