--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,10 @@ body {
   font-family: 'notokr-regular', 'Noto Sans CJK kR', 'Noto Sans KR', 'Arita-buri-SemiBold', '맑은 고딕';
 }
 
+*:focus {
+  outline: none;
+}
+
 .a11y-hidden {
   font-size: 0px;
   text-indent: -9999px;
@@ -214,7 +218,6 @@ header .gnb-area .gnb .sub-menu {
   margin-left: calc(-50vw + 50%);
   background: #fff;
   border-bottom: 1px solid #ccc;
-  overflow: hidden;
 }
 
 header .gnb-area .gnb .sub-menu .wrap {
@@ -348,12 +351,17 @@ header .gnb-area .addmenu-list li .add-menu {
   text-align: left;
   background: #fff;
   font-size: 14px;
+  color: #555;
 }
 
 header .gnb-area .addmenu-list li .add-menu li {
   width: auto;
   display: block;
   height: 30px;
+}
+
+header .gnb-area .addmenu-list li .add-menu li:hover {
+  color: #6c801a;
 }
 
 header .gnb-area .addmenu-list li .add-menu li+li {
@@ -382,11 +390,16 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .visual-wrap .img-slide a {
+  display: none;
   position: absolute;
   top: 0;
   width: 100%;
   height: 550px;
   text-align: center;
+}
+
+.visual-wrap .img-slide a.active {
+  display: inline-block;
 }
 
 .visual-wrap .img-slide a .title {
@@ -465,7 +478,8 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   font-size: 17px;
 }
 
-.visual-wrap .slide-select-area ul li:hover {
+.visual-wrap .slide-select-area ul li:hover,
+.visual-wrap .slide-select-area ul li.active {
   background: #a1af1b;
   color: #fff;
   transition: all 0.5s;
@@ -475,7 +489,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   display: block;
 }
 
-.visual-wrap .btn-slide-stop {
+.visual-wrap .btn-slide-state {
   float: right;
   width: 6%;
   /* width: 60px; */
@@ -485,9 +499,17 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   margin-left: 60px;
 }
 
-.visual-wrap .btn-slide-stop::after {
+.visual-wrap .btn-slide-state::after {
   content: '';
   background: url('../img/btn_pause.png') no-repeat center;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+}
+
+.visual-wrap .btn-slide-state.start::after {
+  content: '';
+  background: url('../img/btn-play.png') no-repeat center;
   width: 20px;
   height: 20px;
   display: inline-block;
@@ -1237,19 +1259,38 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .shop .slide-area .top {
-  width: 100%;
   height: 525px;
   background: #000;
   overflow: hidden;
 }
 
 .shop .slide-area .top ul {
+  width: 100vw;
   font-size: 0;
+  position: relative;
+}
+
+.shop .slide-area .top ul::before {
+  content: '';
+  position: absolute;
+  width: 237px;
+  height: 525px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+}
+
+.shop .slide-area .top ul::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 1163px;
+  width: 237px;
+  height: 525px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
 .shop .slide-area .top>ul>li {
-  float: left;
-  width: 500px;
+  display: inline-block;
+  width: 927px;
 }
 
 .shop .slide-area .top>ul>li img {
@@ -1257,8 +1298,8 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   display: inline-block;
 }
 
-.shop .slide-area .top img:nth-child(1) {
-  margin-left: -50%;
+.shop .slide-area .top li:first-child {
+  margin-left: -690px;
 }
 
 .shop .bottom {
