jQuery 고정헤더, 코드 중복 삭제, 코드 오류 해결 등

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -18,6 +18,7 @@ caption, figcaption, .blind{
   height: 0;
   text-indent: -9999px;
 }
+  *:focus { outline: none;}
 .clear::before, .clear::after{
   clear: both;
   display: block;
