--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,10 +4,6 @@ body {
   font-family: 'notokr-regular', 'Noto Sans CJK kR', 'Noto Sans KR', 'Arita-buri-SemiBold', '맑은 고딕';
 }
 
-*:focus {
-  outline: none;
-}
-
 .a11y-hidden {
   font-size: 0px;
   text-indent: -9999px;
@@ -31,6 +27,7 @@ header .gnb-area .gnb .sub-menu .wrap,
 .today-price,
 .custom-recommendation,
 .saleUp,
+.shop,
 .sns,
 .notice .wrap,
 footer .wrap {
@@ -147,19 +144,21 @@ header .gnb-area .gnb {
   position: relative;
 }
 
-/* scroll 시 */
-/* header .logo-area.hidden {
+header .gnb-area .gnb h3 {
+  float: left;
+  margin: 15px 0 0 40px;
+  width: 90px;
+  height: 32px;
   display: none;
 }
 
-header .gnb-area .gnb.scroll {
-  height: 63px;
-  position: fixed;
-  top: 0;
-  background: #fff;
-  width: 100%;
-  color: #000;
-} */
+header .gnb-area .gnb h3 a {
+  display: inline-block;
+  background: url('../img/logo_m.png') no-repeat center;
+  background-size: cover;
+  width: 90px;
+  height: 32px;
+}
 
 header .gnb-area .gnb .gnb-list {
   text-align: center;
@@ -217,6 +216,7 @@ header .gnb-area .gnb .sub-menu {
   height: 370px;
   margin-left: calc(-50vw + 50%);
   background: #fff;
+  border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
 }
 
@@ -515,28 +515,43 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   display: inline-block;
 }
 
-
 /* ------ start - main ------ */
 
 
 /* ------ start - weekly-best ------ */
 
 .weekly-best .wrap {
-  min-width: 1280;
+  min-width: 1280px;
   height: 610px;
-  overflow: hidden;
   margin: 100px auto;
   position: relative;
+}
+
+.weekly-best .review {
+  width: 1400px;
+  overflow: hidden;
 }
 
 .review-rank-container {
   counter-reset: item;
   list-style-type: none;
+  overflow: hidden;
+  font-size: 0;
+  width: 100vw;
+  text-align: center;
+  height: 485px;
 }
 
 .review-rank-container li {
   display: block;
   position: relative;
+  font-size: 15px;
+  width: 240px;
+  float: left;
+}
+
+.review-rank-container li+li {
+  margin-left: 50px;
 }
 
 .review-rank-container li:before {
@@ -555,6 +570,47 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .review-rank-container li:first-child:before {
   color: red;
+}
+
+.review-rank-container li .image-wrap {
+  width: 100%;
+  height: 270px;
+  background: #f7f7f7;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.review-rank-container li .image-wrap .detail.hidden {
+  visibility: hidden;
+}
+
+.review-rank-container li .image-wrap .detail {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.review-rank-container li .image-wrap .detail a {
+  position: relative;
+  float: left;
+  width: 120px;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.review-rank-container li .image-wrap .detail a+a:before {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  content: '';
+  width: 1px;
+  height: 20px;
+  background: #fff;
 }
 
 .weekly-best .review h3,
@@ -633,62 +689,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   left: 120px;
 }
 
-.weekly-best .wrap ol {
-  font-size: 0;
-  text-align: center;
-  height: 485px;
-}
 
-.weekly-best .wrap ol li {
-  font-size: 15px;
-  width: 240px;
-  float: left;
-}
-
-.weekly-best .wrap ol li+li {
-  margin-left: 50px;
-}
-
-.weekly-best .wrap ol li .image-wrap {
-  width: 100%;
-  height: 270px;
-  background: #f7f7f7;
-  position: relative;
-  box-sizing: border-box;
-}
-
-.weekly-best .wrap ol li .image-wrap .detail.hidden {
-  visibility: hidden;
-}
-
-.weekly-best .wrap ol li .image-wrap .detail {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background: rgba(0, 0, 0, 0.8);
-}
-
-.weekly-best .wrap ol li .image-wrap .detail a {
-  position: relative;
-  float: left;
-  width: 120px;
-  font-size: 16px;
-  color: #fff;
-  cursor: pointer;
-}
-
-.weekly-best .wrap ol li .image-wrap .detail a+a:before {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  content: '';
-  width: 1px;
-  height: 20px;
-  background: #fff;
-}
 
 /* progress Bar 공통 */
 
@@ -721,13 +722,13 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .md-pick {
   height: 520px;
   margin: 100px auto;
+  overflow: hidden;
 }
 
 .md-pick-left {
   width: 525px;
   height: inherit;
   float: left;
-  margin-right: 90px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/md-pick/md-pick-bg.jpg') no-repeat center;
   background-size: cover;
 }
@@ -759,9 +760,10 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .md-pick-right {
   position: relative;
+  float: right;
   width: 780px;
   height: 520px;
-  float: right;
+  overflow: hidden;
 }
 
 .md-pick-right .arrow-area {
@@ -779,26 +781,20 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   margin-right: 20px;
 }
 
-.md-pick-right {
-  overflow: hidden;
-}
-
 .md-pick-right .md-pick-list {
-  width: 100vh;
+  width: 80vw;
   height: 400px;
   overflow: visible;
 }
 
 .md-pick-right .md-pick-list li {
   float: left;
+  width: 240px;
   height: 400px;
   text-align: center;
   margin-right: 50px;
 }
 
-.md-pick-right .md-pick-list li:nth-child(3) {
-  margin-left: -30px;
-}
 
 .md-pick-right .md-pick-list li>img {
   background: #f7f7f7;
@@ -807,12 +803,14 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .md-pick-right .md-pick-list li .item-title {
-  margin: 20px 0;
+  margin: 10px 0;
+  height: 60px;
   font-size: 22px;
 }
 
 .md-pick-right .md-pick-list li .item-price {
-  font-size: 18px;
+  font-size: 20px;
+  color: #383833;
 }
 
 .md-pick-right .progressBar {
@@ -838,7 +836,6 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .tea-ware-shop-left {
   float: left;
   width: 320px;
-  margin-right: 30px;
 }
 
 .tea-ware-shop-left h2 {
@@ -1040,16 +1037,27 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .custom-recommendation {
   margin: 100px auto;
   font-size: 0;
+  overflow: hidden;
 }
 
-.custom-recommendation img {
-  width: 695px;
+.custom-recommendation a {
+  width: 685px;
+  display: block;
+  cursor: pointer;
+  transition: all 0.5s;
 }
 
-.custom-recommendation img:last-child {
-  margin-left: 10px;
+.custom-recommendation a:hover {
+  filter: opacity(80%);
 }
 
+.custom-recommendation .left-img {
+  float: left;
+}
+
+.custom-recommendation .right-img {
+  float: right;
+}
 
 /* ------ saleUp - start ------ */
 
@@ -1144,14 +1152,14 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   background: pink;
 }
 
-.saleUp .image-area>.right .cupon-area {
+.saleUp .image-area>.right .coupon-area {
   height: 340px;
   background: #F9F9F9;
   text-align: center;
   position: relative;
 }
 
-.saleUp .image-area>.right .cupon-area .cupon-text {
+.saleUp .image-area>.right .coupon-area .coupon-text {
   padding: 50px 0 50px 70px;
   font-size: 20px;
   background: url('../img/saleUp/bg_ticket.gif') no-repeat center 25%;
@@ -1159,7 +1167,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   color: #1db875;
 }
 
-.saleUp .image-area>.right .cupon-area .cupon-text span {
+.saleUp .image-area>.right .coupon-area .coupon-text span {
   font-size: 50px;
 }
 
@@ -1199,40 +1207,22 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   left: 0;
 }
 
-.saleUp .image-area>.right .percent-area .number span:nth-child(1)::after {
-  content: '';
-  display: inline-block;
+.saleUp .image-area>.right .percent-area .number span:nth-child(1)::after,
+.saleUp .image-area>.right .percent-area .number span:nth-child(3)::after,
+.saleUp .image-area>.right .percent-area .number span:nth-child(5)::after {
   background: url('../img/saleUp/leaf_2.png') no-repeat center;
-  /* background: red; */
   width: 69px;
   height: 79px;
-  position: absolute;
   top: -79px;
   left: -20px;
 }
 
 .saleUp .image-area>.right .percent-area .number span:nth-child(3)::after {
-  content: '';
-  display: inline-block;
   background: url('../img/saleUp/leaf_3.png') no-repeat center;
-  /* background: red; */
-  width: 69px;
-  height: 79px;
-  position: absolute;
-  top: -79px;
-  left: -20px;
 }
 
 .saleUp .image-area>.right .percent-area .number span:nth-child(5)::after {
-  content: '';
-  display: inline-block;
   background: url('../img/saleUp/leaf_6.png') no-repeat center;
-  /* background: red; */
-  width: 69px;
-  height: 79px;
-  position: absolute;
-  top: -79px;
-  left: -20px;
 }
 
 
@@ -1270,7 +1260,8 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   position: relative;
 }
 
-.shop .slide-area .top ul::before {
+.shop .slide-area .top ul::before,
+.shop .slide-area .top ul::after {
   content: '';
   position: absolute;
   width: 237px;
@@ -1279,13 +1270,8 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .shop .slide-area .top ul::after {
-  content: '';
-  position: absolute;
   top: 0;
   left: 1163px;
-  width: 237px;
-  height: 525px;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
 .shop .slide-area .top>ul>li {
@@ -1303,7 +1289,8 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .shop .bottom {
-  width: inherit;
+  box-sizing: border-box;
+  width: 1400px;
   height: 95px;
   background: #000;
   padding: 0 200px;
@@ -1365,7 +1352,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .shop .item-list h3 {
   position: absolute;
   top: 0;
-  right: 240px;
+  right: 255px;
   font-size: 18px;
   color: #8b8b8b;
 }
@@ -1373,19 +1360,21 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .shop .item-list .bestseller h3 {
   position: absolute;
   top: 0;
-  right: 120px;
+  right: 135px;
 }
 
 .shop .item-list .sale h3 {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 15px;
 }
 
-.shop .item-list .active h3 a {
+.shop .item-list .active h3 a.active {
+  position: relative;
   color: #748346;
   border-bottom: 3px solid #748346;
-  padding-bottom: 15px;
+  padding-bottom: 11px;
+  z-index: 1;
 }
 
 .shop .item-list ul {
@@ -1505,7 +1494,6 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .sns h3 {
   color: #757575;
-  font-family: 'AritaBuriSB', sans-serif;
   font-size: 20px;
   position: relative;
   margin-bottom: 20px;
@@ -1513,10 +1501,13 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .sns h3 span {
   position: absolute;
+  font-family: 'aritasm', 'Arita-buri-SemiBold', sans-serif;
   left: 100px;
-  top: -10px;
+  top: -5px;
   color: #505051;
   font-size: 36px;
+  font-weight: bold;
+  letter-spacing: -3px;
 }
 
 .sns ul {
@@ -1525,10 +1516,15 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .sns li {
   float: left;
+  transition: all 0.5s;
+}
+
+.sns li:hover {
+  filter: opacity(0.8);
 }
 
 .sns img {
-  width: 233px;
+  width: 230px;
   display: block;
 }
 
